Fixed menu popout on iOS

--- a/webroot/css/styling.css
+++ b/webroot/css/styling.css
@@ -186,7 +186,6 @@
 
 
 .overlay {
-    pointer-events: none;
     position: fixed;
     width: 100%;
     height: 100%;
